--- a/lessons/rock-paper-scissors.html
+++ b/lessons/rock-paper-scissors.html
@@ -1,309 +1,295 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Booleans</title>
-  <style>
-    body {
-      background-color: rgb(255, 237, 215);
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-    }
-
-    .header__title {
-      text-align: center;
-      font-size: 48px;
-      font-weight: 800;
-      color: #333;
-      margin: 30px 0;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      background: linear-gradient(90deg, #404dff, #08eb00);
-      background-clip: text;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: fadeInDown 1s ease-in-out;
-    }
-
-    button {
-      cursor: pointer;
-    }
-
-    .rps__container {
-      justify-content: center;
-      align-items: center;
-      display: flex;
-      gap: 10px;
-    }
-
-    .rps__button {
-      color: white;
-      border: 1px solid #ccc;
-      border-radius: 50%;
-      width: 100px;
-      height: 100px;
-      transition: all 0.2s ease;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
-    }
-
-    .rps__button:hover {
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.12);
-      transform: translateY(-2px);
-    }
-
-    .rps__button:active {
-      transform: translateY(4px);
-      box-shadow: 0 0 #2d7a36;
-    }
-
-    .rps__button--rock {
-      background-color: coral;
-    }
-
-    .rps__button--paper {
-      background-color: lightblue;
-    }
-
-    .rps__button--scissors {
-      background-color: palevioletred;
-    }
-
-    .rps__button--rock:hover {
-      background-color: rgb(252, 97, 41);
-    }
-
-    .rps__button--paper:hover {
-      background-color: rgb(82, 207, 248);
-    }
-
-    .rps__button--scissors:hover {
-      background-color: rgb(243, 70, 127);
-    }
-
-    .result__section {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 40px;
-      gap: 20px;
-    }
-
-    #result {
-      font-size: 24px;
-      font-weight: bold;
-      color: #333;
-      background-color: #ffffff;
-      padding: 15px 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      min-width: 300px;
-      margin: 40px auto;
-    }
-
-    .scoreboard {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 40px;
-      background-color: #f0f0f0;
-      padding: 20px 40px;
-      border-radius: 15px;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-      margin: 50px auto;
-      width: fit-content;
-      flex-wrap: wrap;
-    }
-
-    .scoreboard p {
-      font-size: 20px;
-      font-weight: bold;
-      color: #333;
-      background-color: #ffffff;
-      padding: 10px 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
-      text-align: center;
-      min-width: 180px;
-    }
-
-    .reset__button {
-      padding: 10px 20px;
-      font-size: 18px;
-      background-color: #ff4d4d;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      margin: 60px auto;
-      display: block;
-    }
-
-    .reset__button:hover {
-      transform: translateY(-1px);
-      background-color: #fa3939;
-    }
-
-    @keyframes fadeInDown {
-      from {
-        opacity: 0;
-        transform: translateY(-30px);
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Booleans</title>
+    <style>
+      body {
+        background-color: rgb(255, 237, 215);
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
       }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
 
-    @media (max-width: 768px) {
       .header__title {
-        font-size: 32px;
-        margin: 20px 0;
+        text-align: center;
+        font-size: 48px;
+        font-weight: 800;
+        color: #333;
+        margin: 30px 10px;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        background: linear-gradient(90deg, #404dff, #08eb00);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        animation: fadeInDown 1s ease-in-out;
       }
 
       .rps__container {
-        flex-direction: column;
-        gap: 15px;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        margin: 20px;
       }
 
       .rps__button {
-        width: 80px;
-        height: 80px;
+        color: white;
+        border: 1px solid #ccc;
+        border-radius: 50%;
+        width: 100px;
+        height: 100px;
+        transition: all 0.2s ease;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
       }
 
-      .rps__button img {
-        width: 60px;
-        height: 60px;
+      .rps__button:hover {
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.12);
+        transform: translateY(-2px);
+      }
+
+      .rps__button:active {
+        transform: translateY(4px);
+        box-shadow: 0 0 #2d7a36;
+      }
+
+      .rps__button--rock {
+        background-color: coral;
+      }
+
+      .rps__button--paper {
+        background-color: lightblue;
+      }
+
+      .rps__button--scissors {
+        background-color: palevioletred;
+      }
+
+      .rps__button--rock:hover {
+        background-color: rgb(252, 97, 41);
+      }
+
+      .rps__button--paper:hover {
+        background-color: rgb(82, 207, 248);
+      }
+
+      .rps__button--scissors:hover {
+        background-color: rgb(243, 70, 127);
+      }
+
+      .results__section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 40px 0;
+        gap: 20px;
+        padding: 0 10px;
       }
 
       #result {
-        font-size: 18px;
-        padding: 10px 20px;
-        margin: 20px auto;
-        min-width: auto;
+        font-size: 20px;
+        font-weight: bold;
+        color: #333;
+        background-color: #ffffff;
+        padding: 15px;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        width: 90%;
+        max-width: 400px;
+        text-align: center;
       }
 
       .scoreboard {
-        flex-direction: column;
-        gap: 15px;
-        padding: 15px 20px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        background-color: #f0f0f0;
+        padding: 20px;
+        border-radius: 15px;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+        width: 90%;
+        max-width: 500px;
       }
 
       .scoreboard p {
-        min-width: auto;
-        width: 100%;
+        font-size: 18px;
+        font-weight: bold;
+        color: #333;
+        background-color: #ffffff;
+        padding: 10px 15px;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
+        flex: 1 1 120px;
         text-align: center;
       }
 
       .reset__button {
-        font-size: 16px;
-        margin: 30px auto;
-      }
-    }
-  </style>
-</head>
-<body>
-  <h1 class="header__title">Rock Paper Scissors</h1>
-
-  <div class="rps__container">
-    <button class="rps__button rps__button--rock" onclick="play('rock')">
-      <img src="images/rock.png" alt="Rock" width="80" height="80" />
-    </button>
-    <button class="rps__button rps__button--paper" onclick="play('paper')">
-      <img src="images/paper.png" alt="paper" width="80" height="80" />
-    </button>
-    <button class="rps__button rps__button--scissors" onclick="play('scissors')">
-      <img src="images/scissors.png" alt="Scissors" width="80" height="80" />
-    </button>
-  </div>
-
-  <div class="results__section">
-    <p id="result">Result: <span id="result-text"></span></p>
-
-    <div class="scoreboard">
-      <p id="player-score">Wins:</p>
-      <p id="computer-score">Loses:</p>
-      <p id="draw-score">Ties:</p>
-    </div>
-  </div>
-
-  <button class="reset__button" onclick="resetScore()">Reset Score</button>
-
-  <script>
-    let score = JSON.parse(localStorage.getItem("score")) || {
-      playerScore: 0,
-      computerScore: 0,
-      drawScore: 0,
-    };
-
-    let result = '';
-
-    updateScoreboard();
-
-    function play(playerChoice) {
-      const choices = ["rock", "paper", "scissors"];
-      const computerChoice = choices[Math.floor(Math.random() * choices.length)];
-
-      if (playerChoice === computerChoice) {
-        result = `The opponent chose ${computerChoice}. It's a draw`;
-        score.drawScore++;
-      } else if (
-        (playerChoice === "rock" && computerChoice === "scissors") ||
-        (playerChoice === "paper" && computerChoice === "rock") ||
-        (playerChoice === "scissors" && computerChoice === "paper")
-      ) {
-        result = `The opponent chose ${computerChoice}. You won!`;
-        score.playerScore++;
-      } else {
-        result = `The opponent chose ${computerChoice}. You lost!`;
-        score.computerScore++;
+        padding: 12px 20px;
+        font-size: 18px;
+        background-color: #ff4d4d;
+        color: white;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        display: block;
+        width: 90%;
+        max-width: 300px;
+        margin: 40px auto;
       }
 
-      typeResult(result);
-      localStorage.setItem("score", JSON.stringify(score));
-      updateScoreboard();
-    }
+      .reset__button:hover {
+        transform: translateY(-1px);
+        background-color: #fa3939;
+      }
 
-    function updateScoreboard() {
-      document.getElementById("player-score").textContent = `Wins: ${score.playerScore}`;
-      document.getElementById("computer-score").textContent = `Loses: ${score.computerScore}`;
-      document.getElementById("draw-score").textContent = `Ties: ${score.drawScore}`;
-    }
-
-    function resetScore() {
-      score = { playerScore: 0, computerScore: 0, drawScore: 0 };
-      document.getElementById("result-text").textContent = '';
-      localStorage.setItem("score", JSON.stringify(score));
-      updateScoreboard();
-      alert("Your score has been reset");
-    }
-
-    function typeResult(text) {
-      const el = document.getElementById("result-text");
-      el.textContent = "";
-      let i = 0;
-      function type() {
-        if (i < text.length) {
-          el.textContent += text.charAt(i);
-          i++;
-          setTimeout(type, 12);
+      @keyframes fadeInDown {
+        from {
+          opacity: 0;
+          transform: translateY(-30px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
         }
       }
-      type();
-    }
 
-    const rpsButtons = document.querySelectorAll('.rps__button');
-    rpsButtons.forEach(button => {
-      button.addEventListener('click', () => {
-        rpsButtons.forEach(btn => btn.disabled = true);
-        setTimeout(() => {
-          rpsButtons.forEach(btn => btn.disabled = false);
-        }, 800);
+      @media (max-width: 600px) {
+        .header__title {
+          font-size: 32px;
+        }
+
+        .rps__button {
+          width: 70px;
+          height: 70px;
+        }
+
+        .rps__button img {
+          width: 50px;
+          height: 50px;
+        }
+
+        .scoreboard p {
+          font-size: 16px;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <h1 class="header__title">Rock Paper Scissors</h1>
+
+    <div class="rps__container">
+      <button class="rps__button rps__button--rock" onclick="play('rock')">
+        <img src="images/rock.png" alt="Rock" width="80" height="80" />
+      </button>
+      <button class="rps__button rps__button--paper" onclick="play('paper')">
+        <img src="images/paper.png" alt="paper" width="80" height="80" />
+      </button>
+      <button
+        class="rps__button rps__button--scissors"
+        onclick="play('scissors')"
+      >
+        <img src="images/scissors.png" alt="Scissors" width="80" height="80" />
+      </button>
+    </div>
+
+    <div class="results__section">
+      <p id="result">Result: <span id="result-text"></span></p>
+
+      <div class="scoreboard">
+        <p id="player-score">Wins:</p>
+        <p id="computer-score">Loses:</p>
+        <p id="draw-score">Ties:</p>
+      </div>
+    </div>
+
+    <button class="reset__button" onclick="resetScore()">Reset Score</button>
+
+    <script>
+      let score = JSON.parse(localStorage.getItem("score")) || {
+        playerScore: 0,
+        computerScore: 0,
+        drawScore: 0,
+      };
+
+      updateScoreboard();
+
+      function play(playerChoice) {
+        const choices = ["rock", "paper", "scissors"];
+        const computerChoice =
+          choices[Math.floor(Math.random() * choices.length)];
+
+        let resultText;
+        if (playerChoice === computerChoice) {
+          resultText = `The opponent chose ${computerChoice}. It's a draw`;
+          score.drawScore++;
+        } else if (
+          (playerChoice === "rock" && computerChoice === "scissors") ||
+          (playerChoice === "paper" && computerChoice === "rock") ||
+          (playerChoice === "scissors" && computerChoice === "paper")
+        ) {
+          resultText = `The opponent chose ${computerChoice}. You won!`;
+          score.playerScore++;
+        } else {
+          resultText = `The opponent chose ${computerChoice}. You lost!`;
+          score.computerScore++;
+        }
+
+        typeResult(resultText);
+        localStorage.setItem("score", JSON.stringify(score));
+        updateScoreboard();
+      }
+
+      function typeResult(text) {
+        const el = document.getElementById("result-text");
+        el.textContent = "";
+        let i = 0;
+        function type() {
+          if (i < text.length) {
+            el.textContent += text.charAt(i);
+            i++;
+            setTimeout(type, 12);
+          }
+        }
+        type();
+      }
+
+      function updateScoreboard() {
+        document.getElementById(
+          "player-score"
+        ).textContent = `Wins: ${score.playerScore}`;
+        document.getElementById(
+          "computer-score"
+        ).textContent = `Loses: ${score.computerScore}`;
+        document.getElementById(
+          "draw-score"
+        ).textContent = `Ties: ${score.drawScore}`;
+      }
+
+      function resetScore() {
+        score = { playerScore: 0, computerScore: 0, drawScore: 0 };
+        document.getElementById("result-text").textContent = "";
+        localStorage.setItem("score", JSON.stringify(score));
+        updateScoreboard();
+        alert("Your score has been reset");
+      }
+
+      // Disable buttons temporarily after click
+      const rpsButtons = document.querySelectorAll(".rps__button");
+      rpsButtons.forEach((button) => {
+        button.addEventListener("click", () => {
+          rpsButtons.forEach((btn) => (btn.disabled = true));
+          setTimeout(() => {
+            rpsButtons.forEach((btn) => (btn.disabled = false));
+          }, 800);
+        });
       });
-    });
-  </script>
-</body>
+    </script>
+  </body>
 </html>
