--- a/lessons/rock-paper-scissors.html
+++ b/lessons/rock-paper-scissors.html
@@ -8,8 +8,7 @@
       body {
         background-color: rgb(255, 237, 215);
         margin: 0;
-        padding: 0;
-        font-family: sans-serif;
+        font-family: Arial, sans-serif;
       }
 
       .header__title {
@@ -17,7 +16,7 @@
         font-size: 48px;
         font-weight: 800;
         color: #333;
-        margin: 30px 10px;
+        margin: 30px 0;
         text-transform: uppercase;
         letter-spacing: 2px;
         background: linear-gradient(90deg, #404dff, #08eb00);
@@ -27,23 +26,37 @@
         animation: fadeInDown 1s ease-in-out;
       }
 
+      button {
+        cursor: pointer;
+      }
+
       .rps__container {
         justify-content: center;
         align-items: center;
         display: flex;
         gap: 10px;
         flex-wrap: wrap;
-        margin: 20px;
+        padding: 10px;
       }
 
       .rps__button {
         color: white;
         border: 1px solid #ccc;
         border-radius: 50%;
-        width: 100px;
-        height: 100px;
+        width: 90px;
+        height: 90px;
         transition: all 0.2s ease;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+      }
+
+      .rps__button img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
       }
 
       .rps__button:hover {
@@ -59,32 +72,18 @@
       .rps__button--rock {
         background-color: coral;
       }
-
       .rps__button--paper {
         background-color: lightblue;
       }
-
       .rps__button--scissors {
         background-color: palevioletred;
       }
 
-      .rps__button--rock:hover {
-        background-color: rgb(252, 97, 41);
-      }
-
-      .rps__button--paper:hover {
-        background-color: rgb(82, 207, 248);
-      }
-
-      .rps__button--scissors:hover {
-        background-color: rgb(243, 70, 127);
-      }
-
-      .results__section {
+      .result__section {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 40px 0;
+        margin-top: 30px;
         gap: 20px;
         padding: 0 10px;
       }
@@ -94,10 +93,10 @@
         font-weight: bold;
         color: #333;
         background-color: #ffffff;
-        padding: 15px;
+        padding: 15px 20px;
         border-radius: 12px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        width: 90%;
+        width: 100%;
         max-width: 400px;
         text-align: center;
       }
@@ -106,14 +105,13 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        align-items: center;
-        gap: 20px;
+        gap: 15px;
         background-color: #f0f0f0;
         padding: 20px;
         border-radius: 15px;
         box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-        width: 90%;
-        max-width: 500px;
+        max-width: 400px;
+        width: 100%;
       }
 
       .scoreboard p {
@@ -124,12 +122,12 @@
         padding: 10px 15px;
         border-radius: 10px;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
-        flex: 1 1 120px;
+        flex: 1 1 100px;
         text-align: center;
       }
 
       .reset__button {
-        padding: 12px 20px;
+        padding: 10px 20px;
         font-size: 18px;
         background-color: #ff4d4d;
         color: white;
@@ -138,10 +136,8 @@
         cursor: pointer;
         transition: background-color 0.3s ease, transform 0.2s ease;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        display: block;
-        width: 90%;
-        max-width: 300px;
         margin: 40px auto;
+        display: block;
       }
 
       .reset__button:hover {
@@ -160,23 +156,30 @@
         }
       }
 
-      @media (max-width: 600px) {
+      @media (max-width: 480px) {
         .header__title {
-          font-size: 32px;
+          font-size: 28px;
+        }
+
+        #result {
+          font-size: 16px;
+          padding: 10px;
+        }
+
+        .scoreboard {
+          flex-direction: column;
+          gap: 10px;
+          padding: 15px;
+        }
+
+        .scoreboard p {
+          font-size: 16px;
+          padding: 8px;
         }
 
         .rps__button {
           width: 70px;
           height: 70px;
-        }
-
-        .rps__button img {
-          width: 50px;
-          height: 50px;
-        }
-
-        .scoreboard p {
-          font-size: 16px;
         }
       }
     </style>
@@ -186,22 +189,21 @@
 
     <div class="rps__container">
       <button class="rps__button rps__button--rock" onclick="play('rock')">
-        <img src="images/rock.png" alt="Rock" width="80" height="80" />
+        <img src="images/rock.png" alt="Rock" />
       </button>
       <button class="rps__button rps__button--paper" onclick="play('paper')">
-        <img src="images/paper.png" alt="paper" width="80" height="80" />
+        <img src="images/paper.png" alt="Paper" />
       </button>
       <button
         class="rps__button rps__button--scissors"
         onclick="play('scissors')"
       >
-        <img src="images/scissors.png" alt="Scissors" width="80" height="80" />
+        <img src="images/scissors.png" alt="Scissors" />
       </button>
     </div>
 
-    <div class="results__section">
+    <div class="result__section">
       <p id="result">Result: <span id="result-text"></span></p>
-
       <div class="scoreboard">
         <p id="player-score">Wins:</p>
         <p id="computer-score">Loses:</p>
@@ -217,6 +219,7 @@
         computerScore: 0,
         drawScore: 0,
       };
+      let result = "";
 
       updateScoreboard();
 
@@ -225,23 +228,22 @@
         const computerChoice =
           choices[Math.floor(Math.random() * choices.length)];
 
-        let resultText;
         if (playerChoice === computerChoice) {
-          resultText = `The opponent chose ${computerChoice}. It's a draw`;
+          result = `The opponent chose ${computerChoice}. It's a draw.`;
           score.drawScore++;
         } else if (
           (playerChoice === "rock" && computerChoice === "scissors") ||
           (playerChoice === "paper" && computerChoice === "rock") ||
           (playerChoice === "scissors" && computerChoice === "paper")
         ) {
-          resultText = `The opponent chose ${computerChoice}. You won!`;
+          result = `The opponent chose ${computerChoice}. You won!`;
           score.playerScore++;
         } else {
-          resultText = `The opponent chose ${computerChoice}. You lost!`;
+          result = `The opponent chose ${computerChoice}. You lost!`;
           score.computerScore++;
         }
 
-        typeResult(resultText);
+        typeResult(result);
         localStorage.setItem("score", JSON.stringify(score));
         updateScoreboard();
       }
@@ -273,14 +275,17 @@
       }
 
       function resetScore() {
-        score = { playerScore: 0, computerScore: 0, drawScore: 0 };
+        score = {
+          playerScore: 0,
+          computerScore: 0,
+          drawScore: 0,
+        };
         document.getElementById("result-text").textContent = "";
         localStorage.setItem("score", JSON.stringify(score));
         updateScoreboard();
         alert("Your score has been reset");
       }
 
-      // Disable buttons temporarily after click
       const rpsButtons = document.querySelectorAll(".rps__button");
       rpsButtons.forEach((button) => {
         button.addEventListener("click", () => {
